Fixed footer cta text width on iOS

--- a/app/assets/stylesheets/state/project-page-responsive.css.sass
+++ b/app/assets/stylesheets/state/project-page-responsive.css.sass
@@ -37,10 +37,10 @@
     margin-bottom: 0
 
   .project-footer-text
-    font-size: 1.1em
+    font-size: 1em
 
   .project-footer-more
-    font-size: 1.07em
+    font-size: 0.98em
   
   .project-footer-other-project
     display: block
